# aws-billing-slack

./: README.md  pyproject.toml
aws-billing-to-slack/: README.md  samconfig.toml  template.yaml
aws-billing-to-slack/.aws-sam/: build.toml
aws-billing-to-slack/function/: app.py
